# publishing-python-packages

./: .cz.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: ch07-packaging.yml  ch08-packaging.yml  codeql-analysis.yml  list-file.yml  test-color.yml
ch03/first-python-package/: README.md  setup.cfg
ch05/first-python-package/: setup.cfg
ch05/first-python-package-hatch/: README.md  pyproject.toml
ch05/first-python-package-hatch/test/: test_harmonic_mean.py
ch05/first-python-package/src/imppkg/: cli.py
ch05/first-python-package/test/: test_harmonic_mean.py
ch06/first-python-package/: README.md  pyproject.toml  setup.cfg
ch07/first-python-package/: README.md  setup.cfg
ch08/first-python-package/: README.md  setup.cfg
ch08/first-python-package/docs/: conf.py  index.rst
ch09/first-python-package/: pyproject.toml  setup.cfg
ch09/first-python-package/test/: test_harmonic_mean.py
docs/: commitizen.md  run-act.md
docs/docs/hatch-guide/: MANIFEST.IN  pyproject.toml  setup.py
