[metadata]
name = first-python-package
version = 0.0.1
description = This package does amazing things.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daneah/publishing-python-packages
author = Dane Hillard
author_email = "Dane Hillard" <github@danehillard.com>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    termcolor>=1.1.0,<2

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    harmony = imppkg.harmony:main

######################
# Tool configuration #
######################

[tool:pytest]
testpaths = test
; add options
addopts = --cov --strict-markers
;ENSURING EXPECTED FAILURES DON’T PASS UNEXPECTEDLY
xfail_strict = True

[coverage:run]
source = imppkg
branch = True

[coverage:report]
show_missing = True
;Files that are filtered out are only removed from the list
;skip_covered = True

[coverage:paths]
;Coverage.py will use the first entry to replace any subsequent entries in the output
source =
    src/imppkg
    */site-packages/imppkg

;tox automates the installation of packages for testing and the creation of a test matrix for dependency combinations
[tox:tox]
envlist = py37,py310
isolated_build = True

; `tox -p` for parallel run
[testenv]
deps =
    pytest
    pytest-cov
    pytest-randomly
commands =
    pytest {posargs}
